--- a/about22.html
+++ b/about22.html
@@ -52,7 +52,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="Utkarsh.jpg" alt="Utkarsh">
+      <img src="utkarsh.jpg" alt="Utkarsh">
       <div class="container">
         <h2>Utkarsh Swaroop</h2>
         <p class="title">Chief Developer</p>
@@ -67,7 +67,7 @@
       <img src="arnab.jpg" alt="Arnab">
       <div class="container">
         <h2>Arnab Gawri</h2>
-        <p class="title">Designer and Developer`</p>
+        <p class="title">Designer and Developer</p>
         <p>From: Sirsa</p>
         <p>E-mail: 12213061@nitkkr.ac.in</p>
         <p><button class="button" onclick="openpopup();">Contact</button></p>
