--- a/about22.html
+++ b/about22.html
@@ -20,7 +20,7 @@
   <h3 class="heading2">The World's Best Weather Site</h3>
     <ol class="content">
       <li>
-        <strong>Introduction: </strong>This is a weather website which is made in just one month by our team of four Developers. This website focuses on weather forecast and quick updates related to that.We are forcasting the weather updates for the whole world and you are just few clicks away to know the weather of your city. So Enjoy it!
+        <strong>Introduction: </strong>This is a weather website which is made in just one month by our team of two Developers. This website focuses on weather forecast and quick updates related to that.We are forcasting the weather updates for the whole world and you are just few clicks away to know the weather of your city. So Enjoy it!
   </li>
   <li>
     <strong>Mission: </strong>We are providing the weather quickest and accurately. We are delivering reliable weather forecasts and assisting users in planning their daily activities.We want that weather should not be a problem for your daily life.So be updated with us and ready for every kind of weather.
