--- a/about22.html
+++ b/about22.html
@@ -66,7 +66,7 @@
     <div class="card">
       <img src="arnab.jpg" alt="Arnab">
       <div class="container">
-        <h2>Arnab Gawri</h2>
+        <h2>Arunav Gawri</h2>
         <p class="title">Designer and Developer</p>
         <p>From: Sirsa</p>
         <p>E-mail: 12213061@nitkkr.ac.in</p>
