--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			</div>
 			<div class="footer">
 				Thanks For Visiting our Website<br>
-				Created by: Arnab and Utkarsh<br>
+				Created by: Arihant Arnab Arjit Utkarsh<br>
 				<br>
 				<hr>
 				<div class="ulmenu">
