--- a/about22.html
+++ b/about22.html
@@ -74,6 +74,30 @@
       </div>
     </div>
   </div>
+  <div class="column">
+    <div class="card">
+      <img src="arjit.jpg" alt="Arjit">
+      <div class="container">
+        <h2>Arjit Kamboj</h2>
+        <p class="title">Designer and Developer</p>
+        <p>From: Sirsa</p>
+        <p>E-mail: 12212041@nitkkr.ac.in</p>
+        <p><button class="button" onclick="openpopup();">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="arihant.jpg" alt="Arihant">
+      <div class="container">
+        <h2>Arunav Gawri</h2>
+        <p class="title">Designer and Developer</p>
+        <p>From: Sirsa</p>
+        <p>E-mail: 12212033@nitkkr.ac.in</p>
+        <p><button class="button" onclick="openpopup();">Contact</button></p>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="popup" id="popup">
