--- a/about22.html
+++ b/about22.html
@@ -90,9 +90,9 @@
     <div class="card">
       <img src="arihant.jpg" alt="Arihant">
       <div class="container">
-        <h2>Arunav Gawri</h2>
+        <h2>Arihant Jain</h2>
         <p class="title">Designer and Developer</p>
-        <p>From: Sirsa</p>
+        <p>From: Bahadurgarh</p>
         <p>E-mail: 12212033@nitkkr.ac.in</p>
         <p><button class="button" onclick="openpopup();">Contact</button></p>
       </div>
