--- a/about22.html
+++ b/about22.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About Page</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Page</title>
   <link rel="stylesheet" type="text/css" href="aboutstyle22.css" />
-  <link rel="icon" type="image/x-icon" href="weather-forecast.png">
+  <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
 </head>
 <body>
 
@@ -52,7 +53,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="utkarsh.jpg" alt="Utkarsh">
+      <img src="Images/utkarsh.jpg" alt="Utkarsh">
       <div class="container">
         <h2>Utkarsh Swaroop</h2>
         <p class="title">Chief Developer</p>
@@ -64,7 +65,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="arnab.jpg" alt="Arnab">
+      <img src="Images/arnab.jpg" alt="Arnab">
       <div class="container">
         <h2>Arunav Gawri</h2>
         <p class="title">Designer and Developer</p>
@@ -76,7 +77,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="arjit.jpg" alt="Arjit">
+      <img src="Images/arjit.jpg" alt="Arjit">
       <div class="container">
         <h2>Arjit Kamboj</h2>
         <p class="title">Designer and Developer</p>
@@ -88,7 +89,7 @@
   </div>
   <div class="column">
     <div class="card">
-      <img src="arihant.jpg" alt="Arihant">
+      <img src="Images/arihant.jpg" alt="Arihant">
       <div class="container">
         <h2>Arihant Jain</h2>
         <p class="title">Designer and Developer</p>
