--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!-- line 34 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=devicnts.gstatic.com" crossorigin>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-		<link rel="icon" type="image/x-icon" href="weather-forecast.png">
+		<link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="script" href="weatherr.js">
 		<title>Weather</title>
@@ -17,7 +17,6 @@
 			<div class="navbar">
 				<div class="ulmenu">
 					<ul class="menu" id="menu">
-						<!-- <h2 style="color:  #a7c716;">Weather</h2> -->
 						<li><a href="#HOME">HOME</a></li>
 						<li><a href="newssss.html">NEWS</a></li>
 						<li><a href="map.html">MAP</a></li>
@@ -39,9 +38,9 @@
 						</ul>	
 					</div>
 				</div>
-				<div class="side-logo" id="expand"  onclick="unhides();"><img src="menu.jpg"></div>
+				<div class="side-logo" id="expand"  onclick="unhides();"><img src="Images/menu.jpg" alt=""></div>
 			</div>
-			<img src="stormbanner.jpg" alt="Loading">
+			<img src="Images/stormbanner.jpg" alt="Loading">
 		</div>
 		<div class="body">
 			<div class="color">
@@ -102,7 +101,7 @@
 					</div>
 					<a
 						href="https://weather.com/en-IN/india/news/news/2022-02-11-fresh-spell-of-heavy-rains-forecast-over-tamil-nadu-kerala">
-						<div class="news"><img src="news1.jpg"><span class="newsHeading">Fresh Spell of Heavy Rains,
+						<div class="news"><img src="Images/news1.jpg" alt=""><span class="newsHeading">Fresh Spell of Heavy Rains,
 								Thunderstorms Forecast Over Tamil Nadu, Kerala This Weekend:</span><span class="contt">
 								Since the beginning of 2022, mostly dry weather has prevailed over parts of the southern
 								peninsula, with some episodes of light intensity showers. Kerala has recorded a mere 4 mm,
@@ -116,7 +115,7 @@
 					</a>
 					<a
 						href="https://weather.com/en-IN/india/news/news/2022-02-12-world-leaders-meet-at-one-ocean-summit-to-protect-worlds-oceans">
-						<div class="news"><img src="news2.jpg"><span class="newsHeading">World Leaders Meet at One Ocean
+						<div class="news"><img src="Images/news2.jpg" alt=""><span class="newsHeading">World Leaders Meet at One Ocean
 								Summit, Make Commitments to Protect World's Oceans:</span><span class="contt"> French
 								President Emmanuel Macron held a high-level summit to protect the world's oceans, which was
 								attended by representatives of more than 100 countries.
@@ -133,7 +132,7 @@
 					</a>
 					<a
 						href="https://weather.com/en-IN/india/news/news/2022-02-10-western-disturbance-to-bring-rains-over-jammu-kashmir-himachal">
-						<div class="news"><img src="news3.jpg"><span class="newsHeading">Feeble Western Disturbance to Bring
+						<div class="news"><img src="Images/news3.jpg" alt=""><span class="newsHeading">Feeble Western Disturbance to Bring
 								More Rains Over Jammu, Kashmir, Ladakh, Himachal on February 13-14:</span><span
 								class="contt"> February has brought along with it ample rains across the Northern half of
 								India, thanks to a seemingly never-ending stream of western disturbances (WD).
@@ -147,7 +146,7 @@
 								would be short-lived, i.e., just 48 hours (February 13- 14).</span></div>
 					</a>
 					<a href="https://weather.com/en-IN/india/news/news/2022-02-06-gulmarg-gets-worlds-largest-igloo-cafe">
-						<div class="news"><img src="news4.jpg"><span class="newsHeading">Gulmarg Gets “World’s Largest”
+						<div class="news"><img src="Images/news4.jpg" alt=""><span class="newsHeading">Gulmarg Gets “World’s Largest”
 								Igloo Cafe, Becomes This Year’s Trending Tourist Attraction:</span> <span class="contt">The
 								world's largest igloo cafe, located in Gulmarg, Kashmir, has finally opened its doors for
 								visitors until mid-March—the end of winter. Part of Gulmarg's renowned ski resorts, the cafe
@@ -161,7 +160,7 @@
 					</a>
 					<a
 						href="https://weather.com/en-IN/india/news/news/2021-10-19-uttarakhand-23-die-as-500-mm-rainfall-floods-nainital-chamoli">
-						<div class="news"><img src="news5.jpg"><span class="newsHeading">Uttarakhand: 23 Die as 500 mm
+						<div class="news"><img src="Images/news5.jpg" alt=""><span class="newsHeading">Uttarakhand: 23 Die as 500 mm
 								Rainfall Floods Nainital, Chamoli, Udham Singh Nagar, Champawat, Uttarkashi
 								Districts:</span><span class="contt"> Following dozens of deaths in Kerala due to monsoon
 								rains over the weekend, a series of rain-related incidents have claimed at least 23 lives so
