--- a/login2.0.html
+++ b/login2.0.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width=initial-scale=1">
     <title>Login</title>
     <link rel="stylesheet" href="login2.0.css">
-    <link rel="icon" type="image/x-icon" href="weather-forecast.png">
+    <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
 </head>
 <body>
     <div class="center">
