--- a/newssss.html
+++ b/newssss.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>News Page</title>
-  <link rel="icon" type="image/x-icon" href="weather-forecast.png">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>News Page</title>
+  <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
         
   <style>
     body {
