--- a/policy.html
+++ b/policy.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
     <title>Privacy Policy</title>
     <style>
         body {
