--- a/report.html
+++ b/report.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
     <title>Weather Forecast</title>
     <link rel="stylesheet" type="text/css" href="report.css">
-    <link rel="icon" type="image/x-icon" href="weather-forecast.png">
+    <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
     <script src="report.js"></script>
 </head>
 
