--- a/thanks.html
+++ b/thanks.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Thank you</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
         <style>
             a{
                 text-decoration: none;
@@ -34,7 +35,7 @@
     <body style="background-image: linear-gradient(to left,rgb(0, 0, 255),white);">
         <h1>Your message has been sent!</h1>
         <br>
-        <p style="float: right;"><img src="sunshine-2250.gif" style="height: 40vw; width: 40vw; max-height:100%; border-top-left-radius: 50%; border-bottom-right-radius: 50%; border: 2px solid rgb(11, 11, 56); box-shadow: rgb(170, 0, 0) 20px 20px 70px 0px; margin-right: 40px;"/></p>
+        <p style="float: right;"><img src="Images/sunshine-2250.gif" alt="" style="height: 40vw; width: 40vw; max-height:100%; border-top-left-radius: 50%; border-bottom-right-radius: 50%; border: 2px solid rgb(11, 11, 56); box-shadow: rgb(170, 0, 0) 20px 20px 70px 0px; margin-right: 40px;"/></p>
         <p><a href="about22.html">Go back</a></p>
         </body>
 </html>
