--- a/termsofuse.html
+++ b/termsofuse.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Images/weather-forecast.png">
     <title>Terms of Use</title>
     <style>
         /* Add your own CSS styles here */
