add images in map and login and signup pages

--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,7 +30,7 @@
 			
 			<div class="world" id="WORLD">
 				<h1>World Map</h1>
-				<iframe src="https://map.worldweatheronline.com/temperature?lat=56.347853757145636&lng=-4.570312500000001" loading="eager" width="100%" ></iframe>
+				<iframe src="https://map.worldweatheronline.com/temperature?lat=56.347853757145636&lng=-4.570312500000001" loading="eager" width="100%" title="WorldMap"></iframe>
 			</div>
 
 			<div class="india" id="INDIA">
@@ -39,19 +39,19 @@
 
 					<div class="mySlides fade">
 					  <div class="numbertext">1 / 3</div>
-					  <img src="img1.jpg" style="width:100%;" alt="none">
+					  <img src="Images/img1.jpg" style="width:100%;" alt="none">
 					  <div class="text">Heat Map of India</div>
 					</div>
 
 					<div class="mySlides fade">
 					  <div class="numbertext">2 / 3</div>
-					  <img src="img2.jpg" style="width:100%">
+					  <img alt="" src="Images/img2.jpg" style="width:100%">
 					  <div class="text">Clouds</div>
 					</div>
 
 					<div class="mySlides fade">
 					  <div class="numbertext">3 / 3</div>
-					  <img src="img3.jpg" style="width:100%">
+					  <img alt="" src="Images/img3.jpg" style="width:100%">
 					  <div class="text">Heat Map</div>
 					</div>
 
@@ -67,7 +67,7 @@
 
 			<div class="haryana" id="HARYANA">
 				<h1>Haryana Map</h1>
-				<img src="tag.gif" style="width: 100%; height: 600px;"/>
+				<img alt="" src="Images/tag.gif" style="width: 100%; height: 600px;"/>
 			</div>
 		</div>
 
