--- a/map.html
+++ b/map.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="mapStyle1.css" />
 	<title>Weather Map</title>
+	<style>
+		
+	</style>
 </head>
 <body>
 	
@@ -13,6 +16,16 @@
 	</div>
 
 	<marquee class="news">Loading News...</marquee>
+	<div class="ulmenu">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="#WORLD">World</a></li>
+			<li><a href="#INDIA">India</a></li>
+			<li><a href="#HARYANA">Haryana</a></li>
+			<li><a href="take.html">Measures</a></li>
+			<li class="special"><a href="newssss.html">News</a></li>
+		</ul>
+	</div>
 	<div class="body">
 		
 		<div class="sidebar">
